--- a/header.html
+++ b/header.html
@@ -7,13 +7,15 @@
     <title>Expedito Header</title>
 
     <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="styles.css">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Hanalei+Fill&family=Roboto:ital,wght@1,700&display=swap" rel="stylesheet">
     <!-- Criar um Json de opções do Header - Header Dinâmico-->
 </head>
 <body>
     <header>
         <nav>
-            <ul class="">
+            <ul class="menu-options">
                 <li>
                     <a href="/Categoria" class="menu-item" target="_blank" rel="noopener noreferrer">Categoria</a>
                 </li>
