Mudando href dos links do menu

--- a/index.html
+++ b/index.html
@@ -17,23 +17,22 @@
         <nav>
             <ul class="menu-options">
                 <li>
-                    <a href="/Categoria" class="menu-item" target="_blank" rel="noopener noreferrer">Categoria</a>
+                    <a href="#" class="menu-item" target="_blank" rel="noopener noreferrer">Categoria</a>
                 </li>
                 <li>
-                    <a href="/Promoções" class="menu-item" target="_blank" rel="noopener noreferrer">Promoções</a>
+                    <a href="#" class="menu-item" target="_blank" rel="noopener noreferrer">Promoções</a>
                 </li>
                 <li>
-                    <a href="/Lançamentos" class="menu-item" target="_blank" rel="noopener noreferrer">Lançamentos</a>
+                    <a href="#" class="menu-item" target="_blank" rel="noopener noreferrer">Lançamentos</a>
                 </li>
                 <li>
-                    <a href="/MaisVendidos" class="menu-item" target="_blank" rel="noopener noreferrer">Mais Vendidos</a>
+                    <a href="#" class="menu-item" target="_blank" rel="noopener noreferrer">Mais Vendidos</a>
                 </li>
                 <li>
-                    <a href="/Institucional" class="menu-item" target="_blank" rel="noopener noreferrer">Institucional</a>
+                    <a href="#" class="menu-item" target="_blank" rel="noopener noreferrer">Institucional</a>
                 </li>
             </ul>
         </nav>
     </header>
-
 </body>
 </html>
