Header estilizado para o site da playstation

--- a/index.html
+++ b/index.html
@@ -6,34 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Expedito Header</title>
 
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="styles.css">
-
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Hanalei+Fill&family=Roboto:ital,wght@1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Sofia+Sans:wght@100&display=swap" rel="stylesheet">
     <!-- Criar um Json de opções do Header - Header Dinâmico-->
 </head>
 <body>
     <header>
         <nav>
-            <ul class="menu-options">
-                <li>
-                    <a href="/Categoria" class="menu-item" target="_blank" rel="noopener noreferrer">Categoria</a>
-                </li>
-                <li>
-                    <a href="/Promoções" class="menu-item" target="_blank" rel="noopener noreferrer">Promoções</a>
-                </li>
-                <li>
-                    <a href="/Lançamentos" class="menu-item" target="_blank" rel="noopener noreferrer">Lançamentos</a>
-                </li>
-                <li>
-                    <a href="/MaisVendidos" class="menu-item" target="_blank" rel="noopener noreferrer">Mais Vendidos</a>
-                </li>
-                <li>
-                    <a href="/Institucional" class="menu-item" target="_blank" rel="noopener noreferrer">Institucional</a>
-                </li>
-            </ul>
+                <ul class="menu-options">
+                    <li>
+                        <img class="logodaloja" src="img/SeekPng.com_xbox-icon-png_3037732.png" alt="Logo da Loja"></li>
+                    <li>
+                        <a href="#" class="menu-item" target="_blank" rel="noopener noreferrer">Categoria</a>
+                    </li>
+                    <li>
+                        <a href="#" class="menu-item" target="_blank" rel="noopener noreferrer">Promoções</a>
+                    </li>
+                    <li>
+                        <a href="#" class="menu-item" target="_blank" rel="noopener noreferrer">Lançamentos</a>
+                    </li>
+                    <li>
+                        <a href="#" class="menu-item" target="_blank" rel="noopener noreferrer">Mais Vendidos</a>
+                    </li>
+                    <li>
+                        <a href="#" class="menu-item" target="_blank" rel="noopener noreferrer">Institucional</a>
+                    </li>
+                </ul>
         </nav>
     </header>
-
 </body>
 </html>
