--- a/index.html
+++ b/index.html
@@ -4,36 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Expedito Header</title>
-
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/styles.css">
-
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Hanalei+Fill&family=Roboto:ital,wght@1,700&display=swap" rel="stylesheet">
-    <!-- Criar um Json de opções do Header - Header Dinâmico-->
+    <title>Header Marujo</title>
+    <link rel="stylesheet" href="css/css.css">
 </head>
 <body>
     <header>
-        <nav>
-                <ul class="menu-options">
-                    <li><img class="logodaloja" src="img\612a38397c7c75000443b28a.png" alt="Logo da Loja"></li>
-                    <li>
-                        <a href="#" class="menu-item" target="_blank" rel="noopener noreferrer">Categoria</a>
-                    </li>
-                    <li>
-                        <a href="#" class="menu-item" target="_blank" rel="noopener noreferrer">Promoções</a>
-                    </li>
-                    <li>
-                        <a href="#" class="menu-item" target="_blank" rel="noopener noreferrer">Lançamentos</a>
-                    </li>
-                    <li>
-                        <a href="#" class="menu-item" target="_blank" rel="noopener noreferrer">Mais Vendidos</a>
-                    </li>
-                    <li>
-                        <a href="#" class="menu-item" target="_blank" rel="noopener noreferrer">Institucional</a>
-                    </li>
-                </ul>
-        </nav>
-    </header>
+    <section>
+        <ul class="headerprimario">
+            <li class="headercomunicacao">Alguma dúvida? Entre em contato: (99) 9999-9999</li>
+            <li class="headercomunicacao">contato@omarujobarerestaurante</li>
+            <li class="headercomunicacao">Whatsapp: (99) 9999-9999</li>
+        </ul>
+    </section>
+
+    
+    <nav>
+    <ul class="headersecundario">
+        <img class="logodomarujo" src="img/logomarujo.jpg" alt="logo do marujo">
+            <li class="navheader"><a href="#">HOME</a></li>
+            <li class="navheader"><a href="#">CARDÁPIO</a></li>
+            <li class="navheader"><a href="#">GALERIA</a></li>
+            <li class="navheader"><a href="#">CONTATO</a></li>
+    </ul>
+    </nav>
+    
+</header>
 </body>
 </html>
